--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </div>
     </nav>
     <main class="overflow-hidden px-5">
-        <!-- <div class="loading-screen position-fixed bg-dark top-0 bottom-0 start-0 end-0 z-3 d-flex justify-content-center align-items-center ">
+        <div class="loading-screen position-fixed bg-dark top-0 bottom-0 start-0 end-0 z-3 d-flex justify-content-center align-items-center ">
                 <i class="fa fa-spin fa-spinner fa-5x text-light"></i>
-        </div> -->
+        </div>
         <section id="searchInputs" class="container mt-5">
             <div class="row">
                 <div class="col-md-6">
@@ -60,7 +60,7 @@
 
     </main>
     <script src="js/code.jquery.com_jquery-3.7.1.min.js"></script>
-    <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
+    <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
